--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-scraper",
   "version": "0.0.0",
-  "description": "Clientside web scraping utility build with react.",
+  "description": "Clientside web scraping utility built with react.",
   "main": "index.js",
   "browserify": {
     "transform": [
@@ -35,7 +35,8 @@
   },
   "dependencies": {
     "lessify": "^1.0.1",
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "suq": "^0.1.0"
   },
   "keywords": [
     "scraper",
@@ -48,7 +49,8 @@
     "react",
     "react-component",
     "es6",
-    "es7"
+    "es7",
+    "form"
   ],
   "author": "MattMcFarland",
   "license": "BSD-2-Clause",
